--- a/src/task-10.html
+++ b/src/task-10.html
@@ -20,6 +20,9 @@
 
   <div id="boxes"></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"
+    integrity="sha512-/seDHxVfh1NvFUscAj8GsHQVZJvr2jjAoYsNL7As2FCaFHUHYIarl3sRCvVlFgyouVNiRgHIebyLKjpgd1SLDw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/task-10.js" type="module"></script>
 </body>
 
